# wpp_assistant

./: .env.example  .gitignore  README.md  pyproject.toml
src/wpp_assistant/: main.py
src/wpp_assistant/agents/: __init__.py  classifier_agent.py  wpp_assistant_agent.py
src/wpp_assistant/agents/config/: agents.yaml
src/wpp_assistant/clients/: __init__.py  whatsapp_messenger.py
src/wpp_assistant/crews/: __init__.py
src/wpp_assistant/crews/reply_authorized_user_crew/: crew.py
src/wpp_assistant/crews/reply_unauthorized_user_crew/: crew.py
src/wpp_assistant/crews/reply_unauthorized_user_crew/config/: tasks.yaml
src/wpp_assistant/crews/reply_user_crew/: crew.py
src/wpp_assistant/crews/reply_user_crew/config/: tasks.yaml
src/wpp_assistant/repositories/: conversation_repository.py
src/wpp_assistant/skills/gmail/: SKILL.md
src/wpp_assistant/skills/gmail/references/: email-querying-patterns.md
src/wpp_assistant/skills/todoist/: SKILL.md
src/wpp_assistant/skills/todoist/references/: querying-patterns.md
src/wpp_assistant/skills/web-search/: SKILL.md
src/wpp_assistant/skills/whatsapp-messaging/: SKILL.md
src/wpp_assistant/tools/: __init__.py  fetch_day_messages_tool.py  mark_message_as_read_tool.py  send_text_message_tool.py
src/wpp_assistant/types/: __init__.py  capability.py  classify_response.py  conversation.py  phone_number.py  run_type.py  text_body.py  text_message.py  whatsapp_message.py  wpp_assistant_state.py
src/wpp_assistant/utils/: __init__.py  authorized_users.py
(+2 files in other folders)
